--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -883,13 +883,13 @@
 }
 
 .appie-header-main-menu ul>li .sub-menu>li .sub-menu li:hover .sub-menu {
-    top: 0%;
+    top: 0;
     opacity: 1;
     visibility: visible;
 }
 
 .appie-header-main-menu ul>li .sub-menu>li:hover .sub-menu {
-    top: 0%;
+    top: 0;
     opacity: 1;
     visibility: visible;
 }
