--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,77 @@
-<header class="appie-header-area appie-header-area-rtl appie-sticky ">
+<!-- Off Canvas Overlay -->
+<div class="off_canvars_overlay"
+     [class.active]="isMobileMenuOpen"
+     (click)="onOverlayClick($event)">
+</div>
+
+<!-- Off Canvas Menu -->
+<div class="offcanvas_menu">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="offcanvas_menu_wrapper" [class.active]="isMobileMenuOpen">
+                    <div class="canvas_close" (click)="closeMobileMenu()">
+                        <a href="javascript:void(0)"><i class="muri-close"></i></a>
+                    </div>
+                    <div class="offcanvas-brand text-center mb-40">
+                        <img src="../../../assets/image/logo.png" alt="" class="logo">
+                    </div>
+                    <div id="menu" class="text-right">
+                        <ul class="offcanvas_main_menu">
+                            <li class="menu-item-has-children active top">
+                                <a class="" href="/"> الرئيسية</a>
+                            </li>
+                            <li class="menu-item-has-children active">
+                                <a href="#service">حول موري</a>
+                            </li>
+                            <li class="menu-item-has-children active">
+                                <a href="index.html#features">المميزات</a>
+                            </li>
+                            <li class="menu-item-has-children active">
+                                <a href="#questions">الأسئلة الشائعة</a>
+                            </li>
+                            <li class="menu-item-has-children active">
+                                <a class="top" href="aboutUs">من نحن؟</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="d-flex pt-12">
+                        <a class="main-btn" href="/signup"> احجز رحلتك الان</a>
+                    </div>
+                    <div class="offcanvas-social">
+                        <ul style="display: flex;" class="text-center justify-content-center">
+                            <li><a href="https://www.linkedin.com/company/muriapp/" target="_blank" 
+                                   style="display: flex; justify-content: center; align-items: center;">
+                                   <img src="../../../assets/image/linkedin.svg" alt=""></a>
+                            </li>
+                            <li><a href="https://twitter.com/MuriApp" target="_blank" 
+                                   style="display: flex; justify-content: center; align-items: center;">
+                                   <img src="../../../assets/image/twitter.svg" alt=""></a>
+                            </li>
+                            <li><a href="https://www.instagram.com/muri.app/" target="_blank" 
+                                   style="display: flex; justify-content: center; align-items: center;">
+                                   <img src="../../../assets/image/instagram.svg" alt=""></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-widget-info">
+                        <ul class="text-center justify-content-center">
+                            <li><a href="mailto: info&#64;rapidshift.sa">
+                                <img src="../../../assets/image/email.svg" alt="">info&#64;rapidshift.sa</a>
+                            </li>
+                            <li><a href="https://api.whatsapp.com/send/?phone=%2B966534363917&text&type=phone_number&app_absent=0">
+                                <img src="../../../assets/image/whatsapp.svg" alt=""> +966534363917</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Header Navigation -->
+<header class="appie-header-area appie-header-area-rtl appie-sticky">
     <div class="container">
         <div class="header-nav-box">
             <div class="row align-items-center">
