refactor(trip-detail): remove unused headers in submitTripRequest method refactor(trip-details): convert timeLogicValidator to an arrow function fix(landing): correct punctuation in landing component header

--- a/src/app/features/landing/landing.component.html
+++ b/src/app/features/landing/landing.component.html
@@ -97,7 +97,7 @@
                     <div class="appie-hero-content text-right">
                         <span>أهلا بك في موري</span>
                         <h1 class="appie-title">
-                            .رحلات مرنة بمواعيد دقيقة
+                            رحلات مرنة بمواعيد دقيقة.
                         </h1>
                         <p>
                             موري للنقل مختص بنقل الموظفين والطلاب في رحلات منظمة حسب الاحتياج
