fix(footer): update contact email and logo image in footer component

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -9,7 +9,7 @@
                     <h4 class="title">تواصل معنا</h4>
                     <ul>
                         <li><a href="mailto: info&#64;rapidshift.sa"><img src="../../../assets/image/email.svg" alt="">
-                                info&#64;asasit.com</a></li>
+                                info&#64;muri.sa</a></li>
                         <li><a
                                 href="https://api.whatsapp.com/send/?phone=%2B966534363917&text&type=phone_number&app_absent=0"><img
                                     src="../../../assets/image/whatsapp.svg" alt=""> +966534363917</a></li>
@@ -67,7 +67,7 @@
             <div class="col-lg-12">
                 <div class="footer-copyright d-flex align-items-center justify-content-between pt-35">
                     <div class="text-right">
-                        <a><img src="../../../assets/image/logo2.jpg" alt="" class="logo2"></a>
+                        <a><img src="../../../assets/image/logo.png" alt="" class="logo2"></a>
                         <p>مشغل بواسطة النقلة السريعة Rapid Shift</p>
 
                     </div>
