fix(footer, navbar): update WhatsApp contact number and improve formatting

--- a/src/app/features/landing/about-us/about-us.component.html
+++ b/src/app/features/landing/about-us/about-us.component.html
@@ -77,8 +77,8 @@
                                 <li><a href="mailto: info&#64;rapidshift.sa"><img src="../../../assets/image/email.svg"
                                             alt="">info&#64;rapidshift.sa</a></li>
                                 <li><a
-                                        href="https://api.whatsapp.com/send/?phone=%2B966534363917&text&type=phone_number&app_absent=0"><img
-                                            src="../../../assets/image/whatsapp.svg" alt=""> +966534363917</a></li>
+                                        href="https://api.whatsapp.com/send/?phone=%2B966566191383&text&type=phone_number&app_absent=0"><img
+                                            src="../../../assets/image/whatsapp.svg" alt=""> +966 56 619 1383</a></li>
                             </ul>
                         </div>
 
