--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -10,9 +10,9 @@
                     <ul>
                         <li><a href="mailto: info&#64;rapidshift.sa"><img src="../../../assets/image/email.svg" alt="">
                                 info&#64;muri.sa</a></li>
-                        <li><a
-                                href="https://api.whatsapp.com/send/?phone=%2B966534363917&text&type=phone_number&app_absent=0"><img
-                                    src="../../../assets/image/whatsapp.svg" alt=""> +966534363917</a></li>
+                        <li><a style="direction: ltr;" 
+                                href="https://api.whatsapp.com/send/?phone=%2B966566191383&text&type=phone_number&app_absent=0">+966 56 619 1383 <img
+                                    src="../../../assets/image/whatsapp.svg"  alt=""></a></li>
                     </ul>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                 <div class="footer-copyright d-flex align-items-center justify-content-between pt-35">
                     <div class="text-right">
                         <a><img src="../../../assets/image/logo.png" alt="" class="logo2"></a>
-                        <p>مشغل بواسطة النقلة السريعة Rapid Shift</p>
+                        <p>مشغل بواسطة موري Muri</p>
 
                     </div>
                     <div class="copyright-text">
