--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -59,8 +59,8 @@
                             <li><a href="mailto: info&#64;rapidshift.sa">
                                 <img src="../../../assets/image/email.svg" alt="">info&#64;rapidshift.sa</a>
                             </li>
-                            <li><a href="https://api.whatsapp.com/send/?phone=%2B966534363917&text&type=phone_number&app_absent=0">
-                                <img src="../../../assets/image/whatsapp.svg" alt=""> +966534363917</a>
+                            <li><a style="direction: ltr;" href="https://api.whatsapp.com/send/?phone=%2B966566191383&text&type=phone_number&app_absent=0">
+                                 +966 56 619 1383 <img src="../../../assets/image/whatsapp.svg" alt=""></a>
                             </li>
                         </ul>
                     </div>
