--- a/src/app/features/auth/signup/signup.component.scss
+++ b/src/app/features/auth/signup/signup.component.scss
@@ -39,6 +39,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100% !important;
+    flex: 1;
 }
 
 .main-container {
@@ -46,6 +48,8 @@ body {
     width: 100%;
     align-items: center;
     justify-content: space-between;
+    height: 100% !important;
+    flex: 1;
 }
 
 // Form Section (Left Side)
@@ -56,6 +60,9 @@ body {
     padding: 24px 80px;
     gap: 10px;
     width: 55%;
+    height: 100% !important;
+    flex: 1;
+
 }
 
 .form-content {
@@ -65,6 +72,8 @@ body {
     gap: 24px;
     align-items: flex-start;
     width: 100%;
+    height: 100% !important;
+    flex: 1;
 }
 
 // Header Text
@@ -125,7 +134,7 @@ body {
 
 .avatar-img {
     width: 100%;
-    height: 100%;
+    height: 100% !important;
     border-radius: 50%;
     object-fit: cover;
 }
@@ -216,6 +225,67 @@ body {
     }
 }
 
+.form-select {
+    width: 100%;
+    padding: 12px 40px 12px 16px; // Extra padding for arrow
+    background-color: $white;
+    border: 1.5px solid $neutral-200;
+    border-radius: 4px;
+    font-family: $font-primary;
+    font-size: 16px;
+    color: $slate-700;
+    text-align: right;
+    outline: none;
+    direction: rtl;
+
+    // Remove default styling
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
+    // Custom dropdown arrow for RTL
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23475569' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6,9 12,15 18,9'%3e%3c/polyline%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: left 12px center;
+    background-size: 16px;
+
+    &:focus {
+        border-color: $primary-blue;
+        border-width: 2px;
+        background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%235c82ef' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6,9 12,15 18,9'%3e%3c/polyline%3e%3c/svg%3e");
+    }
+
+    // Placeholder styling
+    &:invalid {
+        color: $slate-500;
+    }
+
+    option {
+        color: $slate-700;
+        background-color: $white;
+        font-family: $font-primary;
+        direction: rtl;
+        text-align: right;
+
+        &:disabled {
+            color: $slate-500;
+        }
+    }
+
+    // Safari-specific fixes
+    @supports (-webkit-appearance: none) {
+
+        &::-webkit-inner-spin-button,
+        &::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+        }
+
+        &::-ms-expand {
+            display: none;
+        }
+    }
+}
+
 // Phone Input
 .phone-input {
     position: relative;
@@ -238,7 +308,7 @@ body {
 
     img {
         width: 100%;
-        height: 100%;
+        height: 100% !important;
     }
 }
 
@@ -279,7 +349,7 @@ body {
 
     img {
         width: 100%;
-        height: 100%;
+        height: 100% !important;
     }
 }
 
@@ -317,7 +387,7 @@ body {
 
     img {
         width: 100%;
-        height: 100%;
+        height: 100% !important;
     }
 }
 
@@ -448,6 +518,8 @@ body {
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+    height: 1324px;
+
 }
 
 .background-overlay {
@@ -461,6 +533,8 @@ body {
     background-position: top left;
     background-repeat: no-repeat;
     opacity: 0.2;
+    height: 1324px;
+
 
 }
 
@@ -468,11 +542,12 @@ body {
     position: relative;
     z-index: 1;
     padding: 64px;
-    height: 924px;
+    height: 1324px;
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
+
 }
 
 .content-top {
@@ -532,7 +607,7 @@ body {
 
     img {
         width: 100%;
-        height: 100%;
+        height: 100% !important;
     }
 }
 
@@ -564,7 +639,7 @@ body {
 .testimonial {
     padding-top: 48px;
     width: 100%;
-    
+
 }
 
 .testimonial-content {
@@ -585,7 +660,7 @@ body {
 
     img {
         width: 100%;
-        height: 100%;
+        height: 100% !important;
     }
 }
 
@@ -598,10 +673,10 @@ body {
     width: 427.48px;
     margin: 0;
     direction: rtl;
-    @media ( max-width : 460px)
-    {
+
+    @media (max-width : 460px) {
         width: 100%;
-       
+
     }
 }
 
@@ -613,10 +688,10 @@ body {
     padding-left: 232.97px;
     width: 100%;
     gap: 16px;
-     @media ( max-width : 460px)
-    {
+
+    @media (max-width : 460px) {
         padding: 0;
-        
+
     }
 }
 
